Fix some break some

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -15,10 +15,10 @@ $(NAME): $(SRCS) $(OBJS)
 	cc $(CFLAGS) -c $<
 
 clean:
-	rm $(OBJS)
+	rm -rf $(OBJS)
 
 fclean: clean
-	rm $(NAME)
+	rm -rf $(NAME)
 
 re: fclean all
 
